[metadata]
name = networksage
version = 0.9.3
author = David Pearson
author_email = david@seclarity.io
description = Functionality to support usage and development on top of the NetworkSage platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/networksage-public-tools/networksage
project_urls =
    Bug Tracker = https://gitlab.com/networksage-public-tools/networksage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8.10

[options.packages.find]
where = src