[metadata]
name = networksage
version = 1.0.29
author = David Pearson
author_email = david@seclarity.io
description = Functionality to support usage and development on top of the NetworkSage platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/networksage-public-tools/networksage
project_urls =
    Bug Tracker = https://gitlab.com/networksage-public-tools/networksage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.8.10
install_requires =
    ipaddress >= 1.0.23
    jmespath >= 0.10.0
    pcapy >= 0.11.4
    pcapy-ng >= 1.0.4
    pathlib >= 1.0.1
    python-dateutil >= 2.8.2
    python-magic >= 0.4.24
    six >= 1.16.0
    urllib3 >= 1.26.6
    filelock >= 3.4.0
    jsonify >= 0.5
    argparse >= 1.4.0

[options.package_data]
* = *.pcapng, *.pcap, *.log, *.sf

[options.packages.find]
where = src
