[metadata]
name = networksage-tools
version = 1.1.1
author = David Pearson
author_email = david@seclarity.io
description = Functionality to support usage and development on top of the NetworkSage platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NetworkSage/public-tools
project_urls =
    Bug Tracker = https://github.com/NetworkSage/public-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    ipaddress >= 1.0.23
    jmespath >= 0.10.0
    pcapy >= 0.11.4
    pcapy-ng >= 1.0.4
    pathlib >= 1.0.1
    networksage-wrappers >= 0.9.3
    python-dateutil >= 2.8.2
    python-magic >= 0.4.24
    six >= 1.16.0
    urllib3 >= 1.26.6
    filelock >= 3.4.0
    jsonify >= 0.5
    argparse >= 1.4.0

[options.package_data]
* = *.pcapng, *.pcap, *.log, *.sf

[options.packages.find]
where = src
